# settings_manager

./: README.md
build_tools/: meson.build
include/settings_manager/: settings_manager.hpp
src/: settings_manager.cpp
